Add demo module, sbt-sge plugin, complete graphics pipeline
Demo application module with ShapeRenderer-based example. Self-hosting
sbt-sge build plugin. Complete implementations: ShapeRenderer, GLFrameBuffer
build/close/transfer, Timer lifecycle, Texture reload, GlyphLayout
color tags, PixmapPacker atlas generation, MipMapGenerator,
particle shader init, ParticleEmitter copy, BillboardParticleBatch GPU mode.